--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start-prod": "NODE_ENV=production node ./src/server.js",
     "start-dev": "nodemon ./src/server.js",
-    "lint": "eslint ./src"
+    "lint": "eslint ./src",
+    "migrate": "node-pg-migrate"
   },
   "repository": {
     "type": "git",
@@ -23,7 +24,11 @@
   "homepage": "https://github.com/jokosaputro95/OpenMusic-API-V1#readme",
   "dependencies": {
     "@hapi/hapi": "^21.2.0",
-    "joi": "^17.7.0"
+    "dotenv": "^16.0.3",
+    "joi": "^17.7.0",
+    "nanoid": "^4.0.0",
+    "node-pg-migrate": "^6.2.2",
+    "pg": "^8.9.0"
   },
   "devDependencies": {
     "eslint": "^8.32.0",
