--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
   "homepage": "https://github.com/jokosaputro95/OpenMusic-API-V1#readme",
   "dependencies": {
     "@hapi/hapi": "^21.2.0",
+    "auto-bind": "^4.0.0",
+    "bcrypt": "^5.1.0",
     "dotenv": "^16.0.3",
     "joi": "^17.7.0",
     "nanoid": "^3.3.4",
