--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "homepage": "https://github.com/jokosaputro95/OpenMusic-API-V1#readme",
   "dependencies": {
     "@hapi/hapi": "^21.2.0",
+    "@hapi/jwt": "^3.1.0",
     "auto-bind": "^4.0.0",
     "bcrypt": "^5.1.0",
     "dotenv": "^16.0.3",
