--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,6 +11,8 @@
         "ecmaVersion": "latest"
     },
     "rules": {
-        "no-console": "off"
+        "no-console": "off",
+        "indent": ["error", 4],
+        "no-underscore-dangle": ["error", {"allow": ["_exports"] }]
     }
 }
